<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_email"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_tel"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_tel"
        app:layout_constraintStart_toStartOf="@+id/btn_email"
        app:layout_constraintTop_toBottomOf="@+id/btn_email" />

    <Button
        android:id="@+id/btn_text"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_text"
        app:layout_constraintStart_toStartOf="@+id/btn_tel"
        app:layout_constraintTop_toBottomOf="@+id/btn_tel" />

    <Button
        android:id="@+id/btn_web"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_web"
        app:layout_constraintStart_toStartOf="@+id/btn_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_text" />

    <Button
        android:id="@+id/btn_websearch"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_websearch"
        app:layout_constraintStart_toStartOf="@+id/btn_web"
        app:layout_constraintTop_toBottomOf="@+id/btn_web" />

    <Button
        android:id="@+id/btn_gps"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_gps"
        app:layout_constraintStart_toStartOf="@+id/btn_websearch"
        app:layout_constraintTop_toBottomOf="@+id/btn_websearch" />

    <Button
        android:id="@+id/btn_sendbroadcast"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_sendbroadcast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="4dp"
        android:text="@string/intent_prompt"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="195dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/broadcast_prompt"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gps" />

</androidx.constraintlayout.widget.ConstraintLayout>